2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.addin.xml: Added some conditions to avoid early
	  loading of extensions.

	* Gui/CTextEditorExtension.cs: File extensions are now
	  declared in the node metadata.

2010-02-04  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Compiler/GNUCompiler.cs: Support gcc "note" errortype.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/CBinding.CompilerPanel.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.PackageDetails.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs:
	* gtk-gui/CBinding.OutputOptionsPanel.cs:
	* gtk-gui/CBinding.EditPackagesDialog.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* gtk-gui/CBinding.GeneralOptionsPanel.cs: Flush.

2010-01-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2010-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProjectServiceExtension.cs: Enable extension only
	  for C projects.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.addin.xml: Reverted the fix for Bug 468416 because
	  it marked .h as c++ headers, which is the wrong mimetype.

2010-01-04  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/TagDatabaseManager.cs: Allow parsing of headers
	  included from packages.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Parser/TagDatabaseManager.cs: Name threads to make debugging
	  easier.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs:
	* Gui/CompilerPanel.cs:
	* Gui/EditPackagesDialog.cs:
	* Project/CProjectServiceExtension.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Introduced
	  the ConfigurationSelector class to all methods that
	  previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>
