@@ -1,3 +1,7 @@
+2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Gui/DataProvider.cs: Track api changes.
+
 2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* CBinding.addin.xml: Added some conditions to avoid early
